--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>landing page</title>
-   
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <H1>NOOTROPICS</H1>
@@ -22,7 +22,9 @@
         </ul>
     </nav>
 
-<img src="" alt="">\
+<img src="" alt="">
+
+<div></div>
 
 </body>
 </html>
