--- a/index.html
+++ b/index.html
@@ -1,30 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>landing page</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="description" content="Landing Page Template">
+    <title>Nootropics</title>
+    <link rel="stylesheet" href="scritp.css">
 </head>
+
 <body>
-    <H1>NOOTROPICS</H1>
+    <header>
+        <h1>Nootropics</h1>
+        <p>Enhance Your Cognitive Performance</p>
+    </header>
 
-    <h2>Unlock Your Mind's Full Potential with Premium Nootropics!</h2>
-    <p>Nootropics, also known as “smart drugs” are a diverse group of medicinal substances whose action improves human thinking, learning, and memory, especially in cases where these functions are impaired. This review provides an up-to-date overview of the potential effectiveness and importance of nootropics.</p>
-    <p class="inset">Are you looking to boost mental clarity, enhance focus, and elevate cognitive performance? Discover the power of our premium nootropic supplements, designed to support brain health, improve memory, and keep you sharp throughout the day. Whether you're a student, professional, or simply want to optimize your mental edge, our scientifically-backed formulas are crafted to enhance brain function without the jitters of stimulants.</p>
+    <section class="hero">
+        <h2>Unlock Your Potential</h2>
+        <p>Experience the power of nootropics and elevate your mind.</p>
+        <button>Message Us</button>
+    </section>
 
-    <nav>
-        <ul>
-            <li><a href="default.asp">Home</a></li>
-            <li><a href="news.asp">News</a></li>
-            <li><a href="contact.asp">Contact</a></li>
-            <li><a href="about.asp">About</a></li>
-        </ul>
-    </nav>
+    <section class="product-section">
+        <h2>Our Nootropic Products</h2>
+        <div class="product-container">
+            <div class="product">
+                <h3>Focus Formula</h3>
+                <p>Improve concentration and mental clarity.</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSrkogxH6HNy2-ut6ifVJ09YyITNpWGWGfIg&s">
+                <button>Learn More</button>
+            </div>
+            <div class="product">
+                <h3>Memory Boost</h3>
+                <p>Enhance memory retention and recall.</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSxniFYPWj3-MMzN_Mx8ZGYh4rQ1ft74MO8Aw&s" alt="Memory Boost">
+                <button>Learn More</button>
+            </div>
+            <div class="product">
+                <h3>Mood Enhancer</h3>
+                <p>Reduce stress and improve overall mood.</p>
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ-KFluX_Qyp9ApmwwIh_LJ0ppVA8JovBvzpg&s" alt="Mood Enhancer">
+                <button>Learn More</button>
+            </div>
+        </div>
+    </section>
 
-<img src="" alt="">
-
-<div></div>
-
+    <footer>
+         <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+    </footer>
 </body>
+
 </html>
